# win-x64-mac2win-keyremap

./: .gitignore  Cargo.toml  README.md  VERSIONING.md
.github/workflows/: release.yml
src/: main.rs
